--- a/Week 10 Homework/homework10.html
+++ b/Week 10 Homework/homework10.html
@@ -29,7 +29,7 @@
             <div id = ausmap3></div>
         </div>
         <div class="inner">
-            <div class = "title">Types of Crime</div>
+            <div class = "title">Types of Crime Over Time</div>
             <div id = homework10></div>
         </div>
     </div>
