--- a/Week 10 Homework/homework10.html
+++ b/Week 10 Homework/homework10.html
@@ -25,7 +25,7 @@
 <body>
     <div class="outer">
         <div class="inner">
-            <div class = "title">Map</div>
+            <div class = "title">State Crime in Australia</div>
             <div id = ausmap3></div>
         </div>
         <div class="inner">
