--- a/V2/index.html
+++ b/V2/index.html
@@ -26,6 +26,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">   
+
 
 </head>
 
@@ -45,16 +49,18 @@
             <div class="pure-g">
                 <div class="pure-u-1-2">
                     <div class="description-centre">
-                        <p>Embark on an explorative journey through the multifaceted landscape of Australian crime with our intuitive visualisation presentation. 
-                            This compelling visual narrative unfolds the intricate patterns and prevalent trends of crime across the diverse territories and 
-                            states of Australia, offering users a comprehensive and enlightening view into the dark underbelly of the continent.</p>
+                        <p>This visualisation will be diving deep into the topic of <b>Australian Crime</b>. It will explore this area from different points of view.
+                            Such categories will include things such as <b>Crime States</b>, <b>Crime Types</b>, and <b>Crime Demographics</b>. 
+                            Each section meticulously contributes to painting a broader picture of the crime scenario in Australia, shedding light on the areas that require urgent attention and intervention.</p>
                     </div>
                 </div>
                 <!-- Additional Text Content if needed -->
                 <div class="pure-u-1-2">
                     <div class="description-centre">
-                        <p>The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                            portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia. </p>
+                        <p> Information and datasets on these elements have been cleaned and transformed into graphs and charts to better view the true story of Australian Crime. 
+                            Viewers will find this visualisation to be an enlightening guide in navigating through the complex network of Australian Crime, stimulating critical observations and conversations on the socio-legal context of Australia. 
+                            With the knowledge gained through this thorough visual tool, it is anticipated that a concerted effort would be made to build safer and more secure communities all around the country.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -77,15 +83,16 @@
                 <div class="pure-u-1-2">
                     <div id="ausmap" class="vis-container"></div>
                     <!-- Description for First Graph -->
-                    <p class="description-centre">The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                        portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia.</p>
+                    <p class="description-centre">This <b>map</b> with be visualisating the amount of <b>Australain State Crimes</b> per 100,000 people over the years. To filter out the years, 
+                        use the line graph as a slider!</p>
                 </div>
                 <!-- Second Graph -->
                 <div class="pure-u-1-2">
                     <div id="boxplot" class="vis-container"></div>
                     <!-- Description for Second Graph -->
-                    <p class="description-centre">The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                        portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia.</p>
+                    <p class="description-centre">The <b>boxplot</b> displays the <b>distribution</b> of crime amount states over time. As seen above, <b>Northern Territory</b> has the <b>highest</b> whilst 
+                        <b>Australain Capital Territory</b> has the <b>lowest</b>.
+                    </p>
                 </div>
             </div>
 
@@ -117,10 +124,11 @@
                 <div class="pure-u-1-2">
                     <div id="linegraph" class="vis-container"></div>
                     <!-- Description for Second Graph -->
-                    <p class="description-centre">The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                        portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia. The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                        portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia.</p><p class="description-centre"> The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                        portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia</p>
+                    <p class="description-centre">This section will be exploring the <b>Types of Australain Crime</b>. By dissecting such <b>crime types</b> and <b>crime groups</b>, it will further help individuals
+                        understanding of Australain crime in a deeper sense.</p>
+                    <p class="description-centre"> The <b>dendrogram</b> on the left looks at the hierarchical relationstionship between the crime groups and crime types. To filter out the different 
+                        elements, use the selection drop down box.</p>
+                    <p class="description-centre"> The <b>line graph</b> above explores the <b>trends</b> of the different crime types over time. To filter out specific types, click on the legend on the right side.</p>
                 </div>
             </div>
         </div>
@@ -140,19 +148,22 @@
             <div class="pure-g">
                 <!-- First Graph -->
                 <div class="pure-u-1-2">
-                    <div id="butterflychart" class="vis-container" style="margin-bottom: 40px;"></div>
+                    <div id="histogram" class="vis-container" style="margin-bottom: 40px;"></div>
                     <!-- Description for First Graph -->
                     <p class="description-centre"></p>
                     <div id="scatter" class="vis-container" style="margin-left: 40px;"></div>
                 </div>
                 <!-- Second Graph -->
                 <div class="pure-u-1-2">
-                    <div id="histogram" class="vis-container"></div>
+                    <div id="butterflychart" class="vis-container"></div>
                     <!-- Description for Second Graph -->
-                    <p class="description-centre">The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                        portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia.</p><p class="description-centre">The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                        portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia. The presentation meticulously integrates various dimensions of crime data, from petty thefts to heinous acts of violence, 
-                        portraying a vivid panorama of the criminal activity disseminating through the urban and rural expanses of Australia.</p>
+                    <p class="description-centre">Finally, this area will be investigating the <b>demographics</b> of Australian crime by looking at factors such as <b>sex</b>, <b>age</b> and <b>wealth</b>.</p>
+                    <p class="description-centre">The amount of crime depending on different types of <b>gender</b> is explored through a <b>butterfly chart</b>. To change the years, use the slider below the chart.</p>
+                    <p class="description-centre">The <b>histrogram</b> reveals the trends and distirbutions of <b>age groups</b> within the Australian crime sector. The year can also be fiktered through the slider 
+                        below the chart.</p>
+                    <p class="description-centre">Wealth could be seen as an causation of crime rates. The <b>scatterplot</b> will explore the <b>relationship</b> between <b>wealth</b> and <b>crime</b>. To filter out the states, 
+                        click on the circles in the legend. 
+                    </p>
                 </div>
             </div>
 
@@ -168,37 +179,37 @@
 <script type="text/javascript">
     
     var spec1 = "js/ausmap.vg.json";
-    vegaEmbed('#ausmap', spec1).then(function(result) {
+    vegaEmbed('#ausmap', spec1, { actions: false }).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
     var spec2 = "js/boxplot.vg.json";
-    vegaEmbed('#boxplot', spec2).then(function(result) {
+    vegaEmbed('#boxplot', spec2, { actions: false }).then(function(result) {
         // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
     var spec3 = "js/histogram.vg.json";
-    vegaEmbed('#histogram', spec3).then(function(result) {
+    vegaEmbed('#histogram', spec3, { actions: false }).then(function(result) {
         // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
     var spec4 = "js/linegraph.vg.json";
-    vegaEmbed('#linegraph', spec4).then(function(result) {
+    vegaEmbed('#linegraph', spec4, { actions: false }).then(function(result) {
         // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
     var spec5 = "js/butterflychart.vg.json";
-    vegaEmbed('#butterflychart', spec5).then(function(result) {
+    vegaEmbed('#butterflychart', spec5, { actions: false }).then(function(result) {
         // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
     var spec6 = "js/scatter.vg.json";
-    vegaEmbed('#scatter', spec6).then(function(result) {
+    vegaEmbed('#scatter', spec6, { actions: false }).then(function(result) {
         // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error); 
 
     var spec7 = "js/dendro.vg.json";
-    vegaEmbed('#dendro', spec7).then(function(result) {
+    vegaEmbed('#dendro', spec7, { actions: false }).then(function(result) {
         // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error); 
 
