--- a/V2/index.html
+++ b/V2/index.html
@@ -58,8 +58,8 @@
                 <div class="pure-u-1-2">
                     <div class="description-centre">
                         <p> Information and datasets on these elements have been cleaned and transformed into graphs and charts to better view the true story of Australian Crime. 
-                            Viewers will find this visualisation to be an enlightening guide in navigating through the complex network of Australian Crime, stimulating critical observations and conversations on the socio-legal context of Australia. 
-                            With the knowledge gained through this thorough visual tool, it is anticipated that a concerted effort would be made to build safer and more secure communities all around the country.
+                            Viewers will find this visualisation to be an enlightening guide in navigating through the complex network of Australian Crime, stimulating critical observations and conversations on the safety context of Australia. 
+                            All numbers of crimes/ offences are <b> normalised to the amount per 100,000</b>.
                         </p>
                     </div>
                 </div>
