--- a/V2/index.html
+++ b/V2/index.html
@@ -170,6 +170,20 @@
 
         </div>
 
+        <!-- Divider -->
+        <div class="divider"></div>
+
+        <div class="p1 vis-card">
+        <div class="pure-g">
+            <div class="pure-u-1-1">
+            <!-- First Graph -->
+                <!-- Description for First Graph -->
+                <p class="description-centre"> This visualisation was created by <a href="https://github.com/linhphxm">Linh Pham</a>. 
+                    The data was sourced from the <a href="https://www.abs.gov.au/statistics/people/crime-and-justice/recorded-crime-offenders/latest-release ">Australian Bureau of Statistics</a> and 
+                    <a href="https://www.kaggle.com/datasets/naomit703/youth-criminal-record ">Kaggle</a>. </p>
+                </div>
+            </div>
+        </div>
 
 
 
